--- a/BedRoom.html
+++ b/BedRoom.html
@@ -16,6 +16,7 @@
     </head>
 
     <body background="a.jpg">
-        
+        <h3 id="status" class="btn btn-danger"></h3>
+        <script src="BedRoom.js"></script>
     </body>
 </html>
