--- a/Tv&Ac.html
+++ b/Tv&Ac.html
@@ -14,6 +14,8 @@
     </head>
 
     <body background="e.jpg">
-        
+      <h3 id="status" class="btn btn-danger"></h3>
+         
+  <script src="Tv&Ac.js"></script>
     </body>
 </html>
