--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <center>
             <h2 class="btn btn-info heading">Object Detecter Web App</h2>
             <br><br><br>
-<button oncanplay="ABCD()" class="btn btn-primary">Bed Room</button>
+<a href="BedRoom.html"><button  class="btn btn-primary">Bed Room</button></a>
 <br><br><br>
-<button onclick="BCDE()" class="btn btn-primary">Bottles</button>
+<a href="Bottle.html"><button class="btn btn-primary">Bottles</button></a>
 <br><br><br>
-<button onclick="CDEF()" class="btn btn-primary">Desk</button>
+<a href="Desk.html"><button class="btn btn-primary">Desk</button></a>
 <br><br><br>
-<button onclick="DEFG()" class="btn btn-primary">Fruit Basket</button>
+<a href="Fruits.html"><button  class="btn btn-primary">Fruit Basket</button></a>
 <br><br><br>
-<button onclick="EFGH()" class="btn btn-primary">TV & AC</button>
+<a href="Tv&Ac.html"><button class="btn btn-primary">TV & AC</button></a>
 <br>
         </center>
 <script src="main.js"></script>
