--- a/Bottle.html
+++ b/Bottle.html
@@ -15,6 +15,7 @@
     </head>
 
     <body background="b.jpg">
-        
+        <h3 id="status" class="btn btn-danger"></h3>
+        <script src="Bottle.js"></script>
     </body>
 </html>
