--- a/Desk.html
+++ b/Desk.html
@@ -15,6 +15,7 @@
     </head>
 
     <body background="c.jpg">
-        
+        <h3 id="status" class="btn btn-danger"></h3>
+        <script src="Desk.js"></script>
     </body>
 </html>
