--- a/Fruits.html
+++ b/Fruits.html
@@ -15,6 +15,7 @@
     </head>
 
     <body background="d.jpg">
-        
+        <h3 id="status" class="btn btn-danger"></h3>  
+    <script src="Fruits.js"></script>
     </body>
 </html>
