--- a/BedRoom.html
+++ b/BedRoom.html
@@ -16,7 +16,9 @@
     </head>
 
     <body background="a.jpg">
+        <center>
         <h3 id="status" class="btn btn-danger"></h3>
+    </center>
         <script src="BedRoom.js"></script>
     </body>
 </html>
