--- a/Desk.html
+++ b/Desk.html
@@ -15,7 +15,9 @@
     </head>
 
     <body background="c.jpg">
+        <center>
         <h3 id="status" class="btn btn-danger"></h3>
+    </center>
         <script src="Desk.js"></script>
     </body>
 </html>
