--- a/Fruits.html
+++ b/Fruits.html
@@ -15,7 +15,9 @@
     </head>
 
     <body background="d.jpg">
+        <center>
         <h3 id="status" class="btn btn-danger"></h3>  
+    </center>
     <script src="Fruits.js"></script>
     </body>
 </html>
