--- a/Bottle.html
+++ b/Bottle.html
@@ -15,7 +15,9 @@
     </head>
 
     <body background="b.jpg">
+        <center>
         <h3 id="status" class="btn btn-danger"></h3>
+    </center>
         <script src="Bottle.js"></script>
     </body>
 </html>
