--- a/Tv&Ac.html
+++ b/Tv&Ac.html
@@ -14,7 +14,11 @@
     </head>
 
     <body background="e.jpg">
+      <center>
+
+      
       <h3 id="status" class="btn btn-danger"></h3>
+    </center>
          
   <script src="Tv&Ac.js"></script>
     </body>
